GNOME Bugzilla – Bug 726855
When subdirectory selected, subdirectory name only briefly appears in location bar and then disappears again
Last modified: 2014-03-22 02:24:40 UTC
Bit hard to describe, but here's a video. This affects at least Transmission, probably other apps. Watch the video: I'm choosing the location to which I want to save a torrent. Watch what happens when I select one of the subdirectories of a directory: its name briefly appears in the location bar, then disappears again, and the subdirectory is unselected. A few GTK+ releases back there was a bug where, if you actually navigated into the directory you wanted to save to and *that* directory had subdirectories, the torrent would be saved into the first of that directory's subdirectories. To work around that bug, I trained myself just to *select* - rather than navigate into - the directory to which I wanted to save my torrents. Now this bug has popped up, I have to go back to doing the exact opposite! My muscle memory is getting very confused.
Created attachment 272609 [details] video illustrating the problem
er....got any details on the fix? thanks!
Ah. https://git.gnome.org/browse/gtk+/commit/?id=c99935a54076ab4fcc2349530f21b6315db9f87e